QnA 리스트 가져오기, 사용자 뷰 페이지 생성, QnADTO 추가
아니 학꾼아 아직도 그거밖에 못했니 !!

--- a/MiniShop/src/main/webapp/resources/css/main.css
+++ b/MiniShop/src/main/webapp/resources/css/main.css
@@ -1,141 +1,6 @@
 @charset "utf-8";
 
-.top {
-	margin: 0 auto;
-	display: flex;
-	text-align: center;
-	align-items: center;
-	justify-content: space-between;
+body {
+	margin-top: 100px;
 }
-
-.top-call {
-	border: 1px black solid;
-	width: 250px;
-	background: url("../imgs/top-call.gif") top left no-repeat;
-	background-size: 230px 55px;
-}
-
-.top-call p {
-	font-size: 25px;
-	color: gray;
-	margin-top: 10px;
-}
-
-.top span {
-	font-size: 13px;
-	color: gray;
-}
-
-
-img {
-	
-}
-
-.search-input {
-	border: 1px gray solid;
-	text-align: center;
-	align-items: center;
-	display: flex;
-	justify-items: center;
-	width: 300px;
-	height: 70px;
-	padding-left: 15px;
-}
-
-.search-input input {
-	width: 250px;
-	height: 50px;
-}
-
-.top-r-btn button {
-	width: 150px;
-	padding: 12px 0;
-	font-size: 15px;
-	font-weight: bold;
-}
-
-nav.navbar {
-	background-color: white;
-	border-top: gray 1px solid;
-	border-bottom: gray 1px solid;
-}
-
-.nav-link {
-	color: black;
-}
-
-li {
-	list-style: none;
-}
-
-a {
-	text-decoration: none;
-	color: black;
-}
-
-.navbar-nav {
-	
-}
-
-.navbar-nav li {
-	margin: auto;
-	justify-content: space-between;
-}
-
-.nav-item a {
-	font-size: 17px;
-	font-weight: bold;
-}
-
-.icon-list ul {
-	display: flex;
-	justify-content: space-between;
-}
-
-.icon-list ul li {
-	text-align: center;
-}
-
-.icon-list ul li p {
-		transition: 1s;
-	background-color: white;
-	border-radius: 40px 40px 40px 40px;
-	
-}
-
-
-.myProfile {
-	color:plum;
-	text-decoration: none;
-	line-height: 42px;
-}
-
-
-
-
-.icon1:hover{
-		background-color: yellow;
-		
-}
-.icon2:hover{
-		background-color: #ff80ff;
-		
-}
-.icon3:hover{
-		background-color: #0080ff;
-		
-}
-.icon4:hover{
-		background-color: #ff8080;
-		
-}
-.icon5:hover{
-		background-color: #ff8040;
-		
-}
-.icon6:hover{
-		background-color: #408080;
-		
-}
-
 
