관리자 수정 view단 일부 수정, 관리자 등록 시 암호화(pwencoder) 처리
pome.xml에 시큐리티 디펜던시 주석 해제 / 시큐리티 동작은 꺼둔 상태

--- a/MiniShop/src/main/webapp/resources/css/a_header.css
+++ b/MiniShop/src/main/webapp/resources/css/a_header.css
@@ -12,10 +12,17 @@ body, ul, li {
 	display: none;
 }
 
+/*.navbar > ul > li >  a{
+	margin-left:20px;
+}*/
+
 .navbar > ul > li {
 	position: relative;
 }
 
+.navbar > ul{
+	transition: 1s;
+}
 
 .navbar > ul > li:hover > ul {
 	display:block;
