--- a/MiniShop/src/main/webapp/resources/css/main.css
+++ b/MiniShop/src/main/webapp/resources/css/main.css
@@ -6,3 +6,20 @@ body {
 margin-top: 100px;
 }
 
+#prodBox{
+	border: 1px solid black;
+	margin-top: 30px;
+	height: 500px;
+}
+
+#prodChoice{
+	display: block;
+	margin: 30px;
+	margin-left:100px;
+	
+	
+}
+
+#prodCard{
+	margin-left:30px;
+}
