Header css 변경, 상품 상세 정보 가져오기 완료/ 상품 상세 페이지 미완료 상태

--- a/MiniShop/src/main/webapp/resources/css/header.css
+++ b/MiniShop/src/main/webapp/resources/css/header.css
@@ -12,18 +12,36 @@ body, ul, li {
 	display: none;
 }
 
+
 .navbar > ul > li {
 	position: relative;
 
 }
 
+.navbar a{
+	margin-top:10px;
+}
 
 .navbar > ul > li:hover > ul {
 	display:block;
 	
 }
 
+header 
+
+
+
+
 img {
 	height:700px;
 	width:100%;
+}
+
+#allProduct{
+	padding-left:600px;
+	
+}
+
+#UserArea{
+	padding-left:300px;
 }
