--- a/MiniShop/src/main/webapp/resources/css/main.css
+++ b/MiniShop/src/main/webapp/resources/css/main.css
@@ -20,6 +20,17 @@ margin-top: 100px;
 	
 }
 
+.carousel img{
+	width: 100%;
+	height: 800px;
+}
+
+
 #prodCard{
 	margin-left:30px;
+}
+
+#prodBoxSection{
+	margin-top: 200px;
+	height:700px;
 }
