상세보기 추가(미완료상태)

--- a/MiniShop/src/main/webapp/resources/css/ProductInfo.css
+++ b/MiniShop/src/main/webapp/resources/css/ProductInfo.css
@@ -12,3 +12,18 @@ section{
 img{
 	cursor: pointer;
 }
+
+
+
+#mainImg{
+	width:400px;
+	height:400px;
+}
+
+#prodInfoArea{
+	margin-left:200px;
+}
+
+#prodName{
+	font-size: 35px;
+}
