--- a/MiniShop/src/main/webapp/resources/css/main.css
+++ b/MiniShop/src/main/webapp/resources/css/main.css
@@ -22,7 +22,7 @@ margin-top: 100px;
 
 .carousel img{
 	width: 100%;
-	height: 800px;
+	height: 300px;
 }
 
 
@@ -33,4 +33,18 @@ margin-top: 100px;
 #prodBoxSection{
 	margin-top: 200px;
 	height:700px;
+}
+
+#buy{
+	width:50px;
+	color:white;
+	margin-right:10px;
+}
+
+#cart{
+	margin-right:10px;
+}
+
+#detailImg{
+	margin-top:30px;
 }
