상품 삭제 시 이미지 함께 삭제처리/배송지 등록,수정,삭제 완료
파일 용량 설정 완료(10MB로 늘림) / 상품 페이지 뷰 추가

--- a/MiniShop/src/main/webapp/resources/css/ProductInfo.css
+++ b/MiniShop/src/main/webapp/resources/css/ProductInfo.css
@@ -1,12 +1,18 @@
 @charset "utf-8";
 
 
-
-section{
-	
-	margin-left:30%;
+#imgArea{
 	margin-top:300px;
+	margin-left:30%;
 	
+}
+
+#prodInfoArea{
+	margin-top:300px;
+}
+
+#detailImg{
+	margin-left:25%;
 }
 
 img{
