--- a/MiniShop/src/main/webapp/resources/css/header.css
+++ b/MiniShop/src/main/webapp/resources/css/header.css
@@ -1,11 +1,19 @@
 /* 폰트 시작 */
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap');
 
+
+body{
+	font-family: 'NotoSans',sans-serif;	
+}
 
 body, ul, li {
   margin: 0;
   padding: 0;
   list-style: none;		/* 해당 태그의 list-style을 none으로 하는 것으로 ●을 제거한다 */
+}
+
+header{
+	width: 100%;
 }
 
 
@@ -14,14 +22,56 @@ body, ul, li {
 	font-size: 25px;
 }
 
+/*#topdiv{
+	display:flex;
+	justify-content: space-around;
+	
+}
+*/
+.navbar{
+	width: 100%;
+}
+
+
+#menuName > a{
+	margin-top:6px;
+	font-size: 18px;
+
+}
+
+#menuBar  li{
+	width: 100px;
+}
+
+
+.myPage{
+	width:120px;
+} 
+
+
 .navbar > ul  ul{
 	display: none;
 }
 
-.navbar > ul > li:hover > ul {
+.navbar > div > li > a{
+	margin-top:10px;
+	
+}
+
+
+/*.navbar > ul li{
+	width: 120px;
+}*/
+
+
+.navbar  ul  li:hover > ul {
 	display:block;
-/*	height: 250px;	*/
-	transition: 3s;
+	height: 350px;	
+	
+}
+
+.navbar ul li :hover{
+	color:#ffad94;
 }
 
 
@@ -48,11 +98,11 @@ body, ul, li {
 	width:100%;
 }*/
 
-#allProduct{
+/*#fruit{
 	padding-left:600px;
 	
-}
+}*/
 
-#UserArea{
+/*#UserArea{
 	padding-left:300px;
-}
+}*/
