관리자 카테고리 삭제 추가, 카테고리 등록 유효성 체크 / SecurityConfig path 추가 설정
그 외 view단 일부  및 관리자 페이지 header 수정

--- a/MiniShop/src/main/webapp/resources/css/a_header.css
+++ b/MiniShop/src/main/webapp/resources/css/a_header.css
@@ -24,7 +24,7 @@ body, ul, li {
 	transition: 1s;
 }
 
-.navbar > ul > li:hover > ul {
+.navbar  ul  li:hover > ul {
 	display:block;
 	height: 130px;
 	
