상품 상세보기 이미지 비율 조정 완료

--- a/MiniShop/src/main/webapp/resources/css/header.css
+++ b/MiniShop/src/main/webapp/resources/css/header.css
@@ -1,121 +1,88 @@
-
 /* 폰트 시작 */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
 
 body{
-	font-family: 'Noto Sans KR', sans-serif;
+   font-family: 'Noto Sans KR', sans-serif;
 
 }
 
 body, ul, li {
   margin: 0;
   padding: 0;
-  list-style: none;		/* 해당 태그의 list-style을 none으로 하는 것으로 ●을 제거한다 */
+  list-style: none;      /* 해당 태그의 list-style을 none으로 하는 것으로 ●을 제거한다 */
 }
 
 header{
-	width: 100%;
+   width: 100%;
 }
 
 
-/*#home{
-	margin-left:30px;
-	font-size: 25px;
-}*/
+#home{
+   margin-left:30px;
+   font-size: 25px;
+}
 
-<<<<<<< Updated upstream
 .navbar{
-	width: 100%;
-=======
-.navbar > ul  ul{
-	display: none;
-}
-
-.navbar ul  li:hover > ul {
-	display:block;
-/*	height: 250px;	*/
->>>>>>> Stashed changes
-	transition: 3s;
+   width: 100%;
+   transition: 3s;
 }
 
 
-<<<<<<< Updated upstream
 #menuName > a{
-	margin-top:6px;
-	font-size: 18px;
+   margin-top:6px;
+   font-size: 18px;
 
-=======
-.navbar > ul > li {
-	position: relative;
->>>>>>> Stashed changes
 }
 
 #menuName > ul > li a{
-	font-size: 15px;
+   font-size: 15px;
 }
 
 #menuBar  li{
-	width: 80px;
+   width: 80px;
 }
 
 
 .myPage{
-	width:140px;
+   width:140px;
 } 
 
 .myPage > ul > li a{
-	font-size: 15px;
+   font-size: 15px;
 }
 
 .navbar > ul {
-	position: relative;
+   position: relative;
 }
 
 .navbar > ul  ul{
-	display: none;
+   display: none;
 }
 
 .navbar > div > li > a{
-	margin-top:10px;
-	
+   margin-top:10px;
+   
 }
 
 .navbar  ul  li:hover ul {
-	display:block;
-	height: 350px;		
+   display:block;
+   height: 350px;      
 }
 
-<<<<<<< Updated upstream
 
 .navbar ul li :hover{
-	color:#ffad94;
+   color:#ffad94;
 
 }
 
 
 .navbar > ul > li {
-	position: relative;
+   position: relative;
 
 }
 
 .navbar > ul > li >a{
-	margin-left:15px;
+   margin-left:15px;
 }
 
-
-=======
-/*img {
-	height:700px;
-	width:100%;
-}*/
-
-/*#allProduct{
-	padding-left:600px;
-	
-}
-
-#UserArea{
-	padding-left:300px;
-}*/
->>>>>>> Stashed changes
